[gd_scene load_steps=3 format=3 uid="uid://bfxxohlqmgev7"]

[ext_resource type="Script" path="res://UI/Menus/MainMenu/main_menu.gd" id="1_hapwh"]
[ext_resource type="PackedScene" uid="uid://88knte4bfrke" path="res://UI/Menus/SettingsMenu/settings_menu.tscn" id="3_2vqju"]

[node name="mainMenuContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.454902)

[node name="mainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hapwh")

[node name="Label" type="Label" parent="mainMenu"]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 23.0
text = "Main Menu"

[node name="SettingsBtn" type="Button" parent="mainMenu"]
layout_mode = 2
offset_top = 27.0
offset_right = 1280.0
offset_bottom = 58.0
text = "Settings"

[node name="SettingsMenu" parent="." instance=ExtResource("3_2vqju")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="button_down" from="mainMenu/SettingsBtn" to="mainMenu" method="_on_settings_btn_button_down"]
[connection signal="back" from="SettingsMenu" to="mainMenu" method="_on_settings_menu_back"]
